--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
     {name = "Tim Lodemann"}
 ]
 requires-python = ">=3.9"
-license = { text = "MIT" }
+license = { file = "LICENSE" }
 classifiers = [
     "Operating System :: Microsoft :: Windows :: Windows 10",
 ]
