--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=77.0.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "PyTaskbarProgress"
+name = "PyTaskbar"
 version = "0.1.1"
 description = "The ultimate taskbar progress python package!"
 readme = "README.md"
